update to 2.5.1